unpackaged/objects/DFSS_SnapShot_Job_List__c.object
<CustomObject>
	<description>The continuous integration job list for SnapShot</description>
	<fields>
		<fullName>Developer__c</fullName>
		<label>Developer</label>
		<length>255</length>
		<type>Text</type>
	</fields>
	<fields>
		<fullName>Expansion__c</fullName>
		<label>Expansion</label>
		<length>32000</length>
		<type>LongTextArea</type>
	</fields>
	<fields>
		<fullName>Extra_Field2__c</fullName>
		<label>Extra Field2</label>
		<length>255</length>
		<type>Text</type>
	</fields>
	<fields>
		<fullName>Extra_Field3__c</fullName>
		<label>Extra Field3</label>
		<length>255</length>
		<type>Text</type>
	</fields>
	<fields>
		<fullName>Extra_Field__c</fullName>
		<label>Extra Field</label>
		<length>255</length>
		<type>Text</type>
	</fields>
	<fields>
		<fullName>Global_Identifier__c</fullName>
		<label>Global Identifier</label>
		<length>255</length>
		<type>Text</type>
	</fields>
	<fields>
		<fullName>History_Log__c</fullName>
		<label>History Log</label>
		<length>131072</length>
		<type>LongTextArea</type>
	</fields>
	<fields>
		<fullName>Job_List__c</fullName>
		<label>Job List</label>
		<length>131072</length>
		<type>LongTextArea</type>
	</fields>
	<fields>
		<fullName>Job_Load__c</fullName>
		<label>Job Load</label>
		<length>32000</length>
		<type>LongTextArea</type>
	</fields>
	<fields>
		<fullName>Priority__c</fullName>
		<label>Priority</label>
		<precision>18</precision>
		<scale>0</scale>
		<type>Number</type>
	</fields>
	<fields>
		<fullName>Result__c</fullName>
		<label>Result</label>
		<length>131072</length>
		<type>LongTextArea</type>
	</fields>
	<fields>
		<fullName>Status__c</fullName>
		<label>Status</label>
		<type>Picklist</type>
		<valueSet>
			<valueSetDefinition>
				<value>
					<fullName>Saved</fullName>
				</value>
				<value>
					<fullName>Submitted</fullName>
				</value>
				<value>
					<fullName>Finished</fullName>
				</value>
			</valueSetDefinition>
		</valueSet>
	</fields>
	<fields>
		<fullName>Success__c</fullName>
		<defaultValue>false</defaultValue>
		<label>Success</label>
		<type>Checkbox</type>
	</fields>
	<fields>
		<fullName>Timestamp__c</fullName>
		<label>Timestamp</label>
		<type>DateTime</type>
	</fields>
	<fields>
		<fullName>Username__c</fullName>
		<label>Username</label>
		<length>255</length>
		<type>Text</type>
	</fields>
	<fields>
		<fullName>Version__c</fullName>
		<label>Version</label>
		<precision>4</precision>
		<scale>2</scale>
		<type>Number</type>
	</fields>
	<label>SnapShot Job List</label>
	<listViews>
		<fullName>All</fullName>
		<filterScope>Everything</filterScope>
		<label>All</label>
	</listViews>
	<nameField>
		<label>Job Name</label>
		<type>Text</type>
	</nameField>
	<pluralLabel>SnapShot Job Lists</pluralLabel>
	<sharingModel>ReadWrite</sharingModel>
</CustomObject>